--- a/views/login.hbs
+++ b/views/login.hbs
@@ -35,7 +35,7 @@
                       id="sender-email"
                       class="form-control"
                       name="email"
-                      placeholder="Username"
+                      placeholder="Email"
                     />
                   </div>
                 </div>
