--- a/views/partials/link.hbs
+++ b/views/partials/link.hbs
@@ -26,7 +26,7 @@
             <a class="linkedin" href="#"><i class="lni-linkedin-fill"></i></a>
             <a class="google" href="#"><i class="lni-google-plus"></i></a>
           </div>
-          {{#if currentUser}}
+          {{#if allProduct}}
             <div class="header-top-right float-right">
               Welcome, user &nbsp;
               <a href="/logout">Logout</a>
@@ -87,7 +87,6 @@
             </a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="/index-2">Home 1</a>
-              <a class="dropdown-item" href="/index-3">Home 2</a>
             </div>
           </li>
           <li class="nav-item">
