--- a/views/about.hbs
+++ b/views/about.hbs
@@ -11,7 +11,7 @@
             <div class="breadcrumb-wrapper">
               <h2 class="product-title">About Us</h2>
               <ol class="breadcrumb">
-                <li><a href="#">Home /</a></li>
+                <li><a href="/">Home </a></li>
                 <li class="current">About Us</li>
               </ol>
             </div>
