--- a/views/account-favourite-ads.hbs
+++ b/views/account-favourite-ads.hbs
@@ -12,7 +12,7 @@
             <div class="breadcrumb-wrapper">
               <h2 class="product-title">My Favorites</h2>
               <ol class="breadcrumb">
-                <li><a href="#">Home /</a></li>
+                <li><a href="/">Home /</a></li>
                 <li class="current">My Favorites</li>
               </ol>
             </div>
