--- a/views/adlistinggrid.hbs
+++ b/views/adlistinggrid.hbs
@@ -11,7 +11,7 @@
             <div class="breadcrumb-wrapper">
               <h2 class="product-title">Listings</h2>
               <ol class="breadcrumb">
-                <li><a href="#">Home /</a></li>
+                <li><a href="/">Home /</a></li>
                 <li class="current">Listings</li>
               </ol>
             </div>
