--- a/views/admin-login.hbs
+++ b/views/admin-login.hbs
@@ -11,7 +11,7 @@
             <div class="breadcrumb-wrapper">
               <h2 class="product-title">Login</h2>
               <ol class="breadcrumb">
-                <li><a href="index-2.html">Home /</a></li>
+                <li><a href="/">Home /</a></li>
                 <li class="current">Login</li>
               </ol>
             </div>
