--- a/views/category.hbs
+++ b/views/category.hbs
@@ -37,17 +37,16 @@
                   ></i></a>
                 <a class="google" href="#"><i class="lni-google-plus"></i></a>
               </div>
-              <div class="header-top-right float-right">
-                <a href="/login" class="header-top-button"><i
-                    class="lni-lock"
-                  ></i>
-                  Log In</a>
-                |
-                <a href="/register" class="header-top-button"><i
-                    class="lni-pencil"
-                  ></i>
-                  Register</a>
-              </div>
+              {{#if allProduct}}
+            <div class="header-top-right float-right">
+                Welcome, user &nbsp; <a href="/logout">Logout</a>
+            </div>
+            {{else}}
+            <div class="header-top-right float-right">
+            <a href="/login" class="header-top-button"><i class="lni-lock"></i> Log In</a> |
+            <a href="/register" class="header-top-button"><i class="lni-pencil"></i> Register</a>
+            </div>
+            {{/if}}
             </div>
           </div>
         </div>
@@ -71,7 +70,7 @@
               <span class="lni-menu"></span>
               <span class="lni-menu"></span>
             </button>
-            <a href="/index-2" class="navbar-brand"><img
+            <a href="/" class="navbar-brand"><img
                 src="assets/img/logo.png"
                 alt=""
               /></a>
@@ -88,10 +87,6 @@
                 >
                   Home
                 </a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item active" href="/index-2">Home 1</a>
-                  <a class="dropdown-item" href="/index-3">Home 2</a>
-                </div>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/category">
@@ -111,7 +106,7 @@
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="/adlistinggrid">Ad Grid</a>
                   <a class="dropdown-item" href="/adlistinglist">Ad Listing</a>
-                  <a class="dropdown-item" href="/ads-details">Listing
+                  <a class="dropdown-item" href="/adsDetail">Listing
                     Detail</a>
                 </div>
               </li>
@@ -128,7 +123,7 @@
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="/about">About Us</a>
                   <a class="dropdown-item" href="/services">Services</a>
-                  <a class="dropdown-item" href="/ads-details">Ads Details</a>
+                  <a class="dropdown-item" href="/adsDetail">Ads Details</a>
                   <a class="dropdown-item" href="/post-ads">Ads Post</a>
                   <a class="dropdown-item" href="/pricing">Packages</a>
                   <a
@@ -176,13 +171,9 @@
 
         <ul class="mobile-menu">
           <li>
-            <a class="active" href="#">
+            <a class="active" href="/">
               Home
             </a>
-            <ul class="dropdown">
-              <li><a class="active" href="/index-2">Home 1</a></li>
-              <li><a href="/index-3">Home 2</a></li>
-            </ul>
           </li>
           <li>
             <a href="/category">Categories</a>
@@ -194,7 +185,7 @@
             <ul class="dropdown">
               <li><a href="/adlistinggrid">Ad Grid</a></li>
               <li><a href="/adlistinglist">Ad Listing</a></li>
-              <li><a href="/ads-details">Listing Detail</a></li>
+              <li><a href="/adsDetail">Listing Detail</a></li>
             </ul>
           </li>
           <li>
@@ -202,7 +193,7 @@
             <ul class="dropdown">
               <li><a href="/about">About Us</a></li>
               <li><a href="/services">Services</a></li>
-              <li><a href="/ads-details">Ads Details</a></li>
+              <li><a href="/adsDetail">Ads Details</a></li>
               <li><a href="/post-ads">Ads Post</a></li>
               <li><a href="pricing">Packages</a></li>
               <li><a href="testimonial">Testimonial</a></li>
@@ -264,7 +255,7 @@
                       <div class="form-group inputwithicon">
                         <div class="select">
                           <select>
-                            <option value="none">Select Catagory</option>
+                            <option value="none">Select category</option>
                             <option value="none">Jobs</option>
                             <option value="none">Electronics</option>
                             <option value="none">Mobile</option>
@@ -434,7 +425,7 @@
                           </div>
                           <a href="#"><img
                               class="img-fluid"
-                              src="assets/img/featured/img-1.jpg"
+                              src="{{images}}"
                               alt=""
                             /></a>
                         </figure>
@@ -443,7 +434,7 @@
                             <a href="#">{{category}} > </a>
                             <a href="#">{{brand}}</a>
                           </div>
-                          <h4><a href="ads-details.html">{{title}}</a></h4>
+                          <h4><a href="/adsDetail">{{title}}</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -459,7 +450,7 @@
                           </div>
                           <p class="dsc">{{message}}</p>
                           <div class="listing-bottom">
-                            <h3 class="price float-left">${{price}}</h3>
+                            <h3 class="price float-left">${{price}}</h3><br><br>
                            <a
                       href="/adsDetail/{{_id}}"
                       class="btn btn-common float-right"
@@ -489,7 +480,7 @@
                           </div>
                           <a href="#"><img
                               class="img-fluid"
-                              src="assets/img/featured/img-1.jpg"
+                              src="{{images}}"
                               alt=""
                             /></a>
                         </figure>
@@ -498,7 +489,7 @@
                             <a href="#">{{category}} > </a>
                             <a href="#">{{brand}}</a>
                           </div>
-                          <h4><a href="ads-details.html">{{title}}</a></h4>
+                          <h4><a href="/adsDetail">{{title}}</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -514,7 +505,7 @@
                           </div>
                           <p class="dsc">{{message}}</p>
                           <div class="listing-bottom">
-                            <h3 class="price float-left">${{price}}</h3>
+                            <h3 class="price float-left">${{price}}</h3><br><br>
                            <a
                       href="/adsDetail/{{_id}}"
                       class="btn btn-common float-right"
