--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -12,7 +12,7 @@
             <div class="breadcrumb-wrapper">
               <h2 class="product-title">Contact Us</h2>
               <ol class="breadcrumb">
-                <li><a href="#">Home /</a></li>
+                <li><a href="/">Home /</a></li>
                 <li class="current">Contact Us</li>
               </ol>
             </div>
