--- a/views/register-admin.hbs
+++ b/views/register-admin.hbs
@@ -39,7 +39,6 @@
                 </a>
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="index-2">Home 1</a>
-                  <a class="dropdown-item" href="index-3">Home 2</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -60,7 +59,7 @@
                   <a class="dropdown-item" href="adlistinglist"
                     >Ad Listing</a
                   >
-                  <a class="dropdown-item" href="ads-details"
+                  <a class="dropdown-item" href="/adsDetail"
                     >Listing Detail</a
                   >
                 </div>
@@ -78,7 +77,7 @@
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="about">About Us</a>
                   <a class="dropdown-item" href="services">Services</a>
-                  <a class="dropdown-item" href="ads-details"
+                  <a class="dropdown-item" href="/adsDetail"
                     >Ads Details</a
                   >
                   <a class="dropdown-item" href="post-ads">Ads Post</a>
@@ -132,7 +131,6 @@
             <a href="#"> Home </a>
             <ul class="dropdown">
               <li><a href="index-2">Home 1</a></li>
-              <li><a href="index-3">Home 2</a></li>
             </ul>
           </li>
           <li>
@@ -143,7 +141,7 @@
             <ul class="dropdown">
               <li><a href="adlistinggrid">Ad Grid</a></li>
               <li><a href="adlistinglist">Ad Listing</a></li>
-              <li><a href="ads-details">Listing Detail</a></li>
+              <li><a href="/adsDetail">Listing Detail</a></li>
             </ul>
           </li>
           <li>
@@ -151,7 +149,7 @@
             <ul class="dropdown">
               <li><a href="about">About Us</a></li>
               <li><a href="services">Services</a></li>
-              <li><a href="ads-details">Ads Details</a></li>
+              <li><a href="/adsDetail">Ads Details</a></li>
               <li><a href="post-ads">Ads Post</a></li>
               <li><a href="pricing">Packages</a></li>
               <li><a href="testimonial">Testimonial</a></li>
