--- a/views/register.hbs
+++ b/views/register.hbs
@@ -21,7 +21,7 @@
               <span class="lni-menu"></span>
               <span class="lni-menu"></span>
             </button>
-            <a href="index-2.html" class="navbar-brand"
+            <a href="/.html" class="navbar-brand"
               ><img src="assets/img/logo.png" alt=""
             /></a>
           </div>
@@ -30,17 +30,13 @@
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="#"
+                  href="/"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
                   Home
                 </a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="index-2.html">Home 1</a>
-                  <a class="dropdown-item" href="index-3.html">Home 2</a>
-                </div>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="category.html"> Categories </a>
@@ -129,11 +125,7 @@
 
         <ul class="mobile-menu">
           <li>
-            <a href="#"> Home </a>
-            <ul class="dropdown">
-              <li><a href="index-2.html">Home 1</a></li>
-              <li><a href="index-3.html">Home 2</a></li>
-            </ul>
+            <a href="/"> Home </a>
           </li>
           <li>
             <a href="category.html">Categories</a>
