--- a/views/404.hbs
+++ b/views/404.hbs
@@ -120,12 +120,12 @@
                   Home
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="index-2">Home 1</a>
+                  <a class="dropdown-item" href="/index-2">Home 1</a>
                  
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="category">
+                <a class="nav-link" href="/category">
                   Categories
                 </a>
               </li>
@@ -140,9 +140,9 @@
                   Listings
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="adlistinggrid">Ad Grid</a>
-                  <a class="dropdown-item" href="adlistinglist">Ad Listing</a>
-                  <a class="dropdown-item" href="ads-details">Listing
+                  <a class="dropdown-item" href="/adlistinggrid">Ad Grid</a>
+                  <a class="dropdown-item" href="/adlistinglist">Ad Listing</a>
+                  <a class="dropdown-item" href="/adsDetail">Listing
                     Detail</a>
                 </div>
               </li>
@@ -157,17 +157,17 @@
                   Pages
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="about">About Us</a>
-                  <a class="dropdown-item" href="services">Services</a>
-                  <a class="dropdown-item" href="ads-details">Ads Details</a>
-                  <a class="dropdown-item" href="post-ads">Ads Post</a>
-                  <a class="dropdown-item" href="pricing">Packages</a>
+                  <a class="dropdown-item" href="/about">About Us</a>
+                  <a class="dropdown-item" href="/services">Services</a>
+                  <a class="dropdown-item" href="/adsDetail">Ads Details</a>
+                  <a class="dropdown-item" href="/post-ads">Ads Post</a>
+                  <a class="dropdown-item" href="/pricing">Packages</a>
                   <a
                     class="dropdown-item"
-                    href="testimonial"
+                    href="/testimonial"
                   >Testimonial</a>
-                  <a class="dropdown-item" href="faq">FAQ</a>
-                  <a class="dropdown-item active" href="404">404</a>
+                  <a class="dropdown-item" href="/faq">FAQ</a>
+                  <a class="dropdown-item active" href="/404">404</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
@@ -181,23 +181,23 @@
                   Blog
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="blog">Blog - Right Sidebar</a>
-                  <a class="dropdown-item" href="blog-left-sidebar">Blog -
+                  <a class="dropdown-item" href="/blog">Blog - Right Sidebar</a>
+                  <a class="dropdown-item" href="/blog-left-sidebar">Blog -
                     Left Sidebar</a>
-                  <a class="dropdown-item" href="blog-grid-full-width">
+                  <a class="dropdown-item" href="/blog-grid-full-width">
                     Blog full width
                   </a>
-                  <a class="dropdown-item" href="single-post">Blog Details</a>
+                  <a class="dropdown-item" href="/single-post">Blog Details</a>
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact">
+                <a class="nav-link" href="/contact">
                   Contact
                 </a>
               </li>
             </ul>
             <div class="post-btn">
-              <a class="btn btn-common" href="post-ads"><i
+              <a class="btn btn-common" href="/post-ads"><i
                   class="lni-pencil-alt"
                 ></i>
                 Post an Ad</a>
@@ -225,7 +225,7 @@
             <ul class="dropdown">
               <li><a href="/adlistinggrid">Ad Grid</a></li>
               <li><a href="/adlistinglist">Ad Listing</a></li>
-              <li><a href="/ads-details">Listing Detail</a></li>
+              <li><a href="/adsDetail">Listing Detail</a></li>
             </ul>
           </li>
           <li>
@@ -233,7 +233,7 @@
             <ul class="dropdown">
               <li><a href="/about">About Us</a></li>
               <li><a href="/services">Services</a></li>
-              <li><a href="/ads-details">Ads Details</a></li>
+              <li><a href="/adsDetail">Ads Details</a></li>
               <li><a href="/post-ads">Ads Post</a></li>
               <li><a href="/pricing">Packages</a></li>
               <li><a href="/testimonial">Testimonial</a></li>
