--- a/views/adlistinggrid.hbs
+++ b/views/adlistinggrid.hbs
@@ -161,7 +161,7 @@
                             <a href="#">{{category}} > </a>
                             <a href="#">{{brand}}</a>
                           </div>
-                          <h4><a href="ads-details.html">{{title}}</a></h4>
+                          <h4><a href="/adsDetail/:userid">{{title}}</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -216,7 +216,7 @@
                             <a href="#">Apple</a>
                           </div>
                           <h4>
-                            <a href="ads-details.html"
+                            <a href="adsDetail"
                               >Canon SX Powershot ...</a
                             >
                           </h4>
@@ -243,7 +243,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">$249.00</h3>
                             <a
-                              href="ads-details.html"
+                              href="adsDetail"
                               class="btn btn-common float-right"
                               >View Details</a
                             >
@@ -273,7 +273,7 @@
                             <a href="#">Apple</a>
                           </div>
                           <h4>
-                            <a href="ads-details.html">Apple Macbook Pro ...</a>
+                            <a href="adsDetail">Apple Macbook Pro ...</a>
                           </h4>
                           <div class="meta-tag">
                             <span>
@@ -298,7 +298,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">$289.00</h3>
                             <a
-                              href="ads-details.html"
+                              href="adsDetail"
                               class="btn btn-common float-right"
                               >View Details</a
                             >
@@ -329,7 +329,7 @@
                             <a href="#">Apple</a>
                           </div>
                           <h4>
-                            <a href="ads-details.html"
+                            <a href="adsDetail"
                               >Mercedes Benz E200 ...</a
                             >
                           </h4>
@@ -356,7 +356,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">$199.80</h3>
                             <a
-                              href="ads-details.html"
+                              href="adsDetail"
                               class="btn btn-common float-right"
                               >View Details</a
                             >
@@ -386,7 +386,7 @@
                             <a href="#">Apple</a>
                           </div>
                           <h4>
-                            <a href="ads-details.html">Brown Leather Bag ...</a>
+                            <a href="adsDetail">Brown Leather Bag ...</a>
                           </h4>
                           <div class="meta-tag">
                             <span>
@@ -411,7 +411,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">$206.90</h3>
                             <a
-                              href="ads-details.html"
+                              href="adsDetail"
                               class="btn btn-common float-right"
                               >View Details</a
                             >
