--- a/views/admin-login.hbs
+++ b/views/admin-login.hbs
@@ -61,7 +61,7 @@
                       >Keep me logged in</label
                     >
                   </div>
-                  <a class="forgetpassword" href="forgot-password.html"
+                  <a class="forgetpassword" href="/forgot-password"
                     >Forgot Password?</a
                   >
                 </div>
