--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -52,7 +52,7 @@
                       ></i>
                       1 Comments</a></span>
                 </div>
-                <h2 class="post-title"><a href="single-post.html">Eum Iriure
+                <h2 class="post-title"><a href="/single-post">Eum Iriure
                     Dolor Duis Autem</a></h2>
                 <div class="entry-summary">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -64,7 +64,7 @@
                     veritatis in pariatur ducimus numquam ipsa iusto! Rem
                     eveniet dolorum, quisquam neque beatae quas ea tenetur!</p>
                 </div>
-                <a href="single-post.html" class="btn btn-common">Read More</a>
+                <a href="/single-post" class="btn btn-common">Read More</a>
               </div>
 
             </div>
@@ -95,7 +95,7 @@
                       ></i>
                       1 Comments</a></span>
                 </div>
-                <h2 class="post-title"><a href="single-post.html">Consectetuer
+                <h2 class="post-title"><a href="/single-post">Consectetuer
                     Adipiscing Elit</a></h2>
                 <div class="entry-summary">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -107,7 +107,7 @@
                     veritatis in pariatur ducimus numquam ipsa iusto! Rem
                     eveniet dolorum, quisquam neque beatae quas ea tenetur!</p>
                 </div>
-                <a href="single-post.html" class="btn btn-common">Read More</a>
+                <a href="/single-post" class="btn btn-common">Read More</a>
               </div>
 
             </div>
@@ -138,7 +138,7 @@
                       ></i>
                       1 Comments</a></span>
                 </div>
-                <h2 class="post-title"><a href="single-post.html">Et Leggings
+                <h2 class="post-title"><a href="/single-post">Et Leggings
                     Fanny Pack</a></h2>
                 <div class="entry-summary">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -150,7 +150,7 @@
                     veritatis in pariatur ducimus numquam ipsa iusto! Rem
                     eveniet dolorum, quisquam neque beatae quas ea tenetur!</p>
                 </div>
-                <a href="single-post.html" class="btn btn-common">Read More</a>
+                <a href="/single-post" class="btn btn-common">Read More</a>
               </div>
 
             </div>
@@ -185,7 +185,7 @@
                       ></i>
                       1 Comments</a></span>
                 </div>
-                <h2 class="post-title"><a href="single-post.html">Exercitation
+                <h2 class="post-title"><a href="/single-post">Exercitation
                     Photo Booth</a></h2>
                 <div class="entry-summary">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -197,7 +197,7 @@
                     veritatis in pariatur ducimus numquam ipsa iusto! Rem
                     eveniet dolorum, quisquam neque beatae quas ea tenetur!</p>
                 </div>
-                <a href="single-post.html" class="btn btn-common">Read More</a>
+                <a href="/single-post" class="btn btn-common">Read More</a>
               </div>
 
             </div>
