--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,7 +11,7 @@
             <div class="breadcrumb-wrapper">
               <h2 class="product-title">Login</h2>
               <ol class="breadcrumb">
-                <li><a href="index-2.html">Home /</a></li>
+                <li><a href="/index-2">Home /</a></li>
                 <li class="current">Login</li>
               </ol>
             </div>
@@ -61,7 +61,7 @@
                       >Keep me logged in</label
                     >
                   </div>
-                  <a class="forgetpassword" href="forgot-password.html"
+                  <a class="forgetpassword" href="/forgot-password"
                     >Forgot Password?</a
                   >
                 </div>
