--- a/views/single-post.hbs
+++ b/views/single-post.hbs
@@ -38,7 +38,7 @@
               </div>
 
               <div class="post-content">
-                <h2 class="post-title"><a href="single-post.html">Eum Iriure
+                <h2 class="post-title"><a href="/single-post">Eum Iriure
                     Dolor Duis Autem</a></h2>
                 <div class="meta">
                   <span class="meta-part"><a href="#"><i class="lni-user"></i>
