--- a/views/adlistinglist.hbs
+++ b/views/adlistinglist.hbs
@@ -102,7 +102,7 @@
               <span class="lni-menu"></span>
               <span class="lni-menu"></span>
             </button>
-            <a href="index-2.html" class="navbar-brand"><img
+            <a href="/index-2" class="navbar-brand"><img
                 src="assets/img/logo.png"
                 alt=""
               /></a>
@@ -120,11 +120,11 @@
                   Home
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="index-2.html">Home 1</a>
+                  <a class="dropdown-item" href="/index-2">Home 1</a>
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="category.html">
+                <a class="nav-link" href="/category">
                   Categories
                 </a>
               </li>
@@ -139,10 +139,10 @@
                   Listings
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="adlistinggrid.html">Ad Grid</a>
-                  <a class="dropdown-item active" href="adlistinglist.html">Ad
+                  <a class="dropdown-item" href="/adlistinggrid">Ad Grid</a>
+                  <a class="dropdown-item active" href="/adlistinglist">Ad
                     Listing</a>
-                  <a class="dropdown-item" href="/adsDetail.html">Listing
+                  <a class="dropdown-item" href="/adsDetail">Listing
                     Detail</a>
                 </div>
               </li>
@@ -157,17 +157,17 @@
                   Pages
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="about.html">About Us</a>
-                  <a class="dropdown-item" href="services.html">Services</a>
-                  <a class="dropdown-item" href="/adsDetail.html">Ads Details</a>
-                  <a class="dropdown-item" href="post-ads.html">Ads Post</a>
-                  <a class="dropdown-item" href="pricing.html">Packages</a>
+                  <a class="dropdown-item" href="/about">About Us</a>
+                  <a class="dropdown-item" href="/services">Services</a>
+                  <a class="dropdown-item" href="/adsDetail">Ads Details</a>
+                  <a class="dropdown-item" href="/post-ads">Ads Post</a>
+                  <a class="dropdown-item" href="/pricing">Packages</a>
                   <a
                     class="dropdown-item"
-                    href="testimonial.html"
+                    href="/testimonial"
                   >Testimonial</a>
-                  <a class="dropdown-item" href="faq.html">FAQ</a>
-                  <a class="dropdown-item" href="404.html">404</a>
+                  <a class="dropdown-item" href="/faq">FAQ</a>
+                  <a class="dropdown-item" href="/404">404</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
@@ -181,23 +181,23 @@
                   Blog
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="blog.html">Blog - Right Sidebar</a>
-                  <a class="dropdown-item" href="blog-left-sidebar.html">Blog -
+                  <a class="dropdown-item" href="/blog">Blog - Right Sidebar</a>
+                  <a class="dropdown-item" href="/blog-left-sidebar">Blog -
                     Left Sidebar</a>
-                  <a class="dropdown-item" href="blog-grid-full-width.html">
+                  <a class="dropdown-item" href="/blog-grid-full-width">
                     Blog full width
                   </a>
-                  <a class="dropdown-item" href="single-post.html">Blog Details</a>
+                  <a class="dropdown-item" href="/single-post">Blog Details</a>
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">
+                <a class="nav-link" href="/contact">
                   Contact
                 </a>
               </li>
             </ul>
             <div class="post-btn">
-              <a class="btn btn-common" href="post-ads.html"><i
+              <a class="btn btn-common" href="/post-ads"><i
                   class="lni-pencil-alt"
                 ></i>
                 Post an Ad</a>
@@ -211,46 +211,46 @@
               Home
             </a>
             <ul class="dropdown">
-              <li><a href="index-2.html">Home 1</a></li>
+              <li><a href="/index-2">Home 1</a></li>
             </ul>
           </li>
           <li>
-            <a href="category.html">Categories</a>
+            <a href="/category">Categories</a>
           </li>
           <li>
             <a class="active" href="#">
               Listings
             </a>
             <ul class="dropdown">
-              <li><a href="adlistinggrid.html">Ad Grid</a></li>
-              <li><a class="active" href="adlistinglist.html">Ad Listing</a></li>
-              <li><a href="/adsDetail.html">Listing Detail</a></li>
+              <li><a href="/adlistinggrid">Ad Grid</a></li>
+              <li><a class="active" href="/adlistinglist">Ad Listing</a></li>
+              <li><a href="/adsDetail">Listing Detail</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Pages</a>
             <ul class="dropdown">
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="/adsDetail.html">Ads Details</a></li>
-              <li><a href="post-ads.html">Ads Post</a></li>
-              <li><a href="pricing.html">Packages</a></li>
-              <li><a href="testimonial.html">Testimonial</a></li>
-              <li><a href="faq.html">FAQ</a></li>
-              <li><a href="404.html">404</a></li>
+              <li><a href="/about">About Us</a></li>
+              <li><a href="/services">Services</a></li>
+              <li><a href="/adsDetail">Ads Details</a></li>
+              <li><a href="/post-ads">Ads Post</a></li>
+              <li><a href="/pricing">Packages</a></li>
+              <li><a href="/testimonial">Testimonial</a></li>
+              <li><a href="/faq">FAQ</a></li>
+              <li><a href="/404">404</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Blog</a>
             <ul class="dropdown">
-              <li><a href="blog.html">Blog - Right Sidebar</a></li>
-              <li><a href="blog-left-sidebar.html">Blog - Left Sidebar</a></li>
-              <li><a href="blog-grid-full-width.html"> Blog full width </a></li>
-              <li><a href="single-post.html">Blog Details</a></li>
+              <li><a href="/blog">Blog - Right Sidebar</a></li>
+              <li><a href="/blog-left-sidebar">Blog - Left Sidebar</a></li>
+              <li><a href="/blog-grid-full-width"> Blog full width </a></li>
+              <li><a href="/single-post">Blog Details</a></li>
             </ul>
           </li>
           <li>
-            <a href="contact.html">Contact Us</a>
+            <a href="/contact">Contact Us</a>
           </li>
         </ul>
 
@@ -420,7 +420,7 @@
                             <a href="#">{{category}} > </a>
                             <a href="#">{{condition}}</a>
                           </div>
-                          <h4><a href="/adsDetail.html">{{title}}</a></h4>
+                          <h4><a href="/adsDetail">{{title}}</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -438,7 +438,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">${{price}}</h3>
                             <a
-                              href="/adsDetail.html"
+                              href="/adsDetail"
                               class="btn btn-common float-right"
                             >View Details</a>
                           </div>
@@ -469,7 +469,7 @@
                             <a href="#">Electronic > </a>
                             <a href="#">Apple</a>
                           </div>
-                          <h4><a href="/adsDetail.html">Apple Macbook Pro ...</a></h4>
+                          <h4><a href="/adsDetail">Apple Macbook Pro ...</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -489,7 +489,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">$289.00</h3>
                             <a
-                              href="/adsDetail.html"
+                              href="/adsDetail"
                               class="btn btn-common float-right"
                             >View Details</a>
                           </div>
@@ -519,7 +519,7 @@
                             <a href="#">Electronic > </a>
                             <a href="#">Apple</a>
                           </div>
-                          <h4><a href="/adsDetail.html">Mercedes Benz E200 ...</a></h4>
+                          <h4><a href="/adsDetail">Mercedes Benz E200 ...</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -539,7 +539,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">$199.80</h3>
                             <a
-                              href="/adsDetail.html"
+                              href="/adsDetail"
                               class="btn btn-common float-right"
                             >View Details</a>
                           </div>
@@ -566,7 +566,7 @@
                             <a href="#">Electronic > </a>
                             <a href="#">Apple</a>
                           </div>
-                          <h4><a href="/adsDetail.html">Brown Leather Bag ...</a></h4>
+                          <h4><a href="/adsDetail">Brown Leather Bag ...</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -586,7 +586,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">$206.90</h3>
                             <a
-                              href="/adsDetail.html"
+                              href="/adsDetail"
                               class="btn btn-common float-right"
                             >View Details</a>
                           </div>
@@ -618,7 +618,7 @@
                             <a href="#">{{category}} > </a>
                             <a href="#">{{condition}}</a>
                           </div>
-                          <h4><a href="/adsDetail.html">{{title}}</a></h4>
+                          <h4><a href="/adsDetail">{{title}}</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -636,7 +636,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">${{price}}</h3>
                             <a
-                              href="/adsDetail.html"
+                              href="/adsDetail"
                               class="btn btn-common float-right"
                             >View Details</a>
                           </div>
@@ -667,7 +667,7 @@
                             <a href="#">Electronic > </a>
                             <a href="#">Apple</a>
                           </div>
-                          <h4><a href="/adsDetail.html">Apple Macbook Pro ...</a></h4>
+                          <h4><a href="/adsDetail">Apple Macbook Pro ...</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -687,7 +687,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">$289.00</h3>
                             <a
-                              href="/adsDetail.html"
+                              href="/adsDetail"
                               class="btn btn-common float-right"
                             >View Details</a>
                           </div>
@@ -714,7 +714,7 @@
                             <a href="#">Electronic > </a>
                             <a href="#">Apple</a>
                           </div>
-                          <h4><a href="/adsDetail.html">Mercedes Benz E200 ...</a></h4>
+                          <h4><a href="/adsDetail">Mercedes Benz E200 ...</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -734,7 +734,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">$199.80</h3>
                             <a
-                              href="/adsDetail.html"
+                              href="/adsDetail"
                               class="btn btn-common float-right"
                             >View Details</a>
                           </div>
@@ -764,7 +764,7 @@
                             <a href="#">Electronic > </a>
                             <a href="#">Apple</a>
                           </div>
-                          <h4><a href="/adsDetail.html">Brown Leather Bag ...</a></h4>
+                          <h4><a href="/adsDetail">Brown Leather Bag ...</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
@@ -784,7 +784,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">$206.90</h3>
                             <a
-                              href="/adsDetail.html"
+                              href="/adsDetail"
                               class="btn btn-common float-right"
                             >View Details</a>
                           </div>
