--- a/views/index.hbs
+++ b/views/index.hbs
@@ -82,7 +82,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="/adlistinggrid">Ad Grid</a>
                                 <a class="dropdown-item" href="/adlistinglist">Ad Listing</a>
-                                <a class="dropdown-item" href="/ads-details">Listing Detail</a>
+                                <a class="dropdown-item" href="//adsDetail">Listing Detail</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -93,7 +93,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="/about">About Us</a>
                                 <a class="dropdown-item" href="/services">Services</a>
-                                <a class="dropdown-item" href="/ads-details">Ads Details</a>
+                                <a class="dropdown-item" href="//adsDetail">Ads Details</a>
                                 <a class="dropdown-item" href="/post-ads">Ads Post</a>
                                 <a class="dropdown-item" href="/pricing">Packages</a>
                                 <a class="dropdown-item" href="/testimonial">Testimonial</a>
@@ -144,7 +144,7 @@
                     <ul class="dropdown">
                         <li><a href="/adlistinggrid">Ad Grid</a></li>
                         <li><a href="/adlistinglist">Ad Listing</a></li>
-                        <li><a href="/ads-details">Listing Detail</a></li>
+                        <li><a href="//adsDetail">Listing Detail</a></li>
                     </ul>
                 </li>
                 <li>
@@ -152,7 +152,7 @@
                     <ul class="dropdown">
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/services">Services</a></li>
-                        <li><a href="/ads-details">Ads Details</a></li>
+                        <li><a href="//adsDetail">Ads Details</a></li>
                         <li><a href="/post-ads">Ads Post</a></li>
                         <li><a href="/pricing">Packages</a></li>
                         <li><a href="/testimonial">Testimonial</a></li>
@@ -377,7 +377,7 @@
                                 <a href="#">{{category}} </a>
                                 <a href="#">{{brand}}</a>
                             </div>
-                            <h4><a href="ads-details">{{title}}</a></h4>
+                            <h4><a href="/adsDetail">{{title}}</a></h4>
                             <div class="meta-tag">
                                 <span>
                                     <a href="#"><i class="lni-user"></i> {{firstName}}</a>
@@ -415,7 +415,7 @@
                                 <a href="#">Electronic > </a>
                                 <a href="#">Computers</a>
                             </div>
-                            <h4><a href="ads-details">Apple Macbook Pro ...</a></h4>
+                            <h4><a href="/adsDetail">Apple Macbook Pro ...</a></h4>
                             <div class="meta-tag">
                                 <span>
                                     <a href="#"><i class="lni-user"></i> Sara Doe</a>
@@ -431,7 +431,7 @@
                                 Lorem Ipsum has been the industry.</p>
                             <div class="listing-bottom">
                                 <h3 class="price float-left">$289.00</h3>
-                                <a href="ads-details" class="btn btn-common float-right">View Details</a>
+                                <a href="/adsDetail" class="btn btn-common float-right">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -450,7 +450,7 @@
                                 <a href="#">Vehicle > </a>
                                 <a href="#">Cars</a>
                             </div>
-                            <h4><a href="ads-details">Mercedes Benz E200 ...</a></h4>
+                            <h4><a href="/adsDetail">Mercedes Benz E200 ...</a></h4>
                             <div class="meta-tag">
                                 <span>
                                     <a href="#"><i class="lni-user"></i> Rossi Josh</a>
@@ -466,7 +466,7 @@
                                 Lorem Ipsum has been the industry.</p>
                             <div class="listing-bottom">
                                 <h3 class="price float-left">$199.80</h3>
-                                <a href="ads-details" class="btn btn-common float-right">View Details</a>
+                                <a href="/adsDetail" class="btn btn-common float-right">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -488,7 +488,7 @@
                                 <a href="#">Others > </a>
                                 <a href="#">Bags</a>
                             </div>
-                            <h4><a href="ads-details">Brown Leather Bag ...</a></h4>
+                            <h4><a href="/adsDetail">Brown Leather Bag ...</a></h4>
                             <div class="meta-tag">
                                 <span>
                                     <a href="#"><i class="lni-user"></i> Maria Barlow</a>
@@ -504,7 +504,7 @@
                                 Lorem Ipsum has been the industry.</p>
                             <div class="listing-bottom">
                                 <h3 class="price float-left">$206.90</h3>
-                                <a href="ads-details" class="btn btn-common float-right">View Details</a>
+                                <a href="/adsDetail" class="btn btn-common float-right">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -523,7 +523,7 @@
                                 <a href="#">Electronic > </a>
                                 <a href="#">Apple</a>
                             </div>
-                            <h4><a href="ads-details">Iphonex 6 Plus Factor ...</a></h4>
+                            <h4><a href="/adsDetail">Iphonex 6 Plus Factor ...</a></h4>
                             <div class="meta-tag">
                                 <span>
                                     <a href="#"><i class="lni-user"></i> David Givens</a>
@@ -539,7 +539,7 @@
                                 Lorem Ipsum has been the industry.</p>
                             <div class="listing-bottom">
                                 <h3 class="price float-left">$106.70</h3>
-                                <a href="ads-details" class="btn btn-common float-right">View Details</a>
+                                <a href="/adsDetail" class="btn btn-common float-right">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -561,7 +561,7 @@
                                 <a href="#">Furniture > </a>
                                 <a href="#">Home</a>
                             </div>
-                            <h4><a href="ads-details">Wooden Dining Tabl ...</a></h4>
+                            <h4><a href="/adsDetail">Wooden Dining Tabl ...</a></h4>
                             <div class="meta-tag">
                                 <span>
                                     <a href="#"><i class="lni-user"></i> John Smith</a>
@@ -577,7 +577,7 @@
                                 Lorem Ipsum has been the industry.</p>
                             <div class="listing-bottom">
                                 <h3 class="price float-left">$120.00</h3>
-                                <a href="ads-details" class="btn btn-common float-right">View Details</a>
+                                <a href="/adsDetail" class="btn btn-common float-right">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -599,7 +599,7 @@
                                     <img class="img-fluid" src="/assets/img/product/img1.jpg" alt="">
                                     <div class="overlay">
                                         <div>
-                                            <a class="btn btn-common" href="ads-details">View Details</a>
+                                            <a class="btn btn-common" href="/adsDetail">View Details</a>
                                         </div>
                                     </div>
                                     <div class="btn-product bg-sale">
@@ -608,7 +608,7 @@
                                     <span class="price">$999.00</span>
                                 </div>
                                 <div class="product-content">
-                                    <h3 class="product-title"><a href="ads-details">Macbook Pro 2020</a></h3>
+                                    <h3 class="product-title"><a href="/adsDetail">Macbook Pro 2020</a></h3>
                                     <span>Electronic / Computers</span>
                                     <div class="icon">
                                         <span><i class="lni-bookmark"></i></span>
@@ -641,13 +641,13 @@
                                     <img class="img-fluid" src="/assets/img/product/img2.jpg" alt="">
                                     <div class="overlay">
                                         <div>
-                                            <a class="btn btn-common" href="ads-details">View Details</a>
+                                            <a class="btn btn-common" href="/adsDetail">View Details</a>
                                         </div>
                                     </div>
                                     <span class="price">$269.00</span>
                                 </div>
                                 <div class="product-content">
-                                    <h3 class="product-title"><a href="ads-details">Nikon Camera</a></h3>
+                                    <h3 class="product-title"><a href="/adsDetail">Nikon Camera</a></h3>
                                     <span>Electronic / Camera</span>
                                     <div class="icon">
                                         <span><i class="lni-bookmark"></i></span>
@@ -680,7 +680,7 @@
                                     <img class="img-fluid" src="/assets/img/product/img3.jpg" alt="">
                                     <div class="overlay">
                                         <div>
-                                            <a class="btn btn-common" href="ads-details">View Details</a>
+                                            <a class="btn btn-common" href="/adsDetail">View Details</a>
                                         </div>
                                     </div>
                                     <div class="btn-product bg-slod">
@@ -689,7 +689,7 @@
                                     <span class="price">$799.00</span>
                                 </div>
                                 <div class="product-content">
-                                    <h3 class="product-title"><a href="ads-details">iPhone X Refurbished</a></h3>
+                                    <h3 class="product-title"><a href="/adsDetail">iPhone X Refurbished</a></h3>
                                     <span>Electronic / Phones</span>
                                     <div class="icon">
                                         <span><i class="lni-bookmark"></i></span>
@@ -722,13 +722,13 @@
                                     <img class="img-fluid" src="/assets/img/product/img4.jpg" alt="">
                                     <div class="overlay">
                                         <div>
-                                            <a class="btn btn-common" href="ads-details">View Details</a>
+                                            <a class="btn btn-common" href="/adsDetail">View Details</a>
                                         </div>
                                     </div>
                                     <span class="price">$99.00</span>
                                 </div>
                                 <div class="product-content">
-                                    <h3 class="product-title"><a href="ads-details">Baby Toy</a></h3>
+                                    <h3 class="product-title"><a href="/adsDetail">Baby Toy</a></h3>
                                     <span>Sports / Baby Toys</span>
                                     <div class="icon">
                                         <span><i class="lni-bookmark"></i></span>
@@ -761,13 +761,13 @@
                                     <img class="img-fluid" src="/assets/img/product/img5.jpg" alt="">
                                     <div class="overlay">
                                         <div>
-                                            <a class="btn btn-common" href="ads-details">View Details</a>
+                                            <a class="btn btn-common" href="/adsDetail">View Details</a>
                                         </div>
                                     </div>
                                     <span class="price">$99.00</span>
                                 </div>
                                 <div class="product-content">
-                                    <h3 class="product-title"><a href="ads-details">Baby Toy</a></h3>
+                                    <h3 class="product-title"><a href="/adsDetail">Baby Toy</a></h3>
                                     <span>Sports / Baby Toys</span>
                                     <div class="icon">
                                         <span><i class="lni-bookmark"></i></span>
@@ -800,7 +800,7 @@
                                     <img class="img-fluid" src="/assets/img/product/img6.jpg" alt="">
                                     <div class="overlay">
                                         <div>
-                                            <a class="btn btn-common" href="ads-details">View Details</a>
+                                            <a class="btn btn-common" href="/adsDetail">View Details</a>
                                         </div>
                                     </div>
                                     <div class="btn-product bg-sale">
@@ -809,7 +809,7 @@
                                     <span class="price">$99.00</span>
                                 </div>
                                 <div class="product-content">
-                                    <h3 class="product-title"><a href="ads-details">Baby Toy</a></h3>
+                                    <h3 class="product-title"><a href="/adsDetail">Baby Toy</a></h3>
                                     <span>Sports / Baby Toys</span>
                                     <div class="icon">
                                         <span><i class="lni-bookmark"></i></span>
