--- a/views/privacy-setting.hbs
+++ b/views/privacy-setting.hbs
@@ -41,43 +41,43 @@
                 <nav class="navdashboard">
                   <ul>
                     <li>
-                      <a href="dashboard.html">
+                      <a href="/dashboard">
                         <i class="lni-dashboard"></i>
                         <span>Dashboard</span>
                       </a>
                     </li>
                     <li>
-                      <a href="account-profile-setting.html">
+                      <a href="/account-profile-setting">
                         <i class="lni-cog"></i>
                         <span>Profile Settings</span>
                       </a>
                     </li>
                     <li>
-                      <a href="account-myads.html">
+                      <a href="/account-myads">
                         <i class="lni-layers"></i>
                         <span>My Ads</span>
                       </a>
                     </li>
                     <li>
-                      <a href="offermessages.html">
+                      <a href="/offermessages">
                         <i class="lni-envelope"></i>
                         <span>Offers/Messages</span>
                       </a>
                     </li>
                     <li>
-                      <a href="payments.html">
+                      <a href="/payments">
                         <i class="lni-wallet"></i>
                         <span>Payments</span>
                       </a>
                     </li>
                     <li>
-                      <a href="account-favourite-ads.html">
+                      <a href="/account-favourite-ads">
                         <i class="lni-heart"></i>
                         <span>My Favourites</span>
                       </a>
                     </li>
                     <li>
-                      <a class="active" href="privacy-setting.html">
+                      <a class="active" href="/privacy-setting">
                         <i class="lni-star"></i>
                         <span>Privacy Settings</span>
                       </a>
