--- a/views/register.hbs
+++ b/views/register.hbs
@@ -21,7 +21,7 @@
               <span class="lni-menu"></span>
               <span class="lni-menu"></span>
             </button>
-            <a href="/.html" class="navbar-brand"
+            <a href="/" class="navbar-brand"
               ><img src="assets/img/logo.png" alt=""
             /></a>
           </div>
@@ -39,7 +39,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="category.html"> Categories </a>
+                <a class="nav-link" href="/category"> Categories </a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -52,11 +52,11 @@
                   Listings
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="adlistinggrid.html">Ad Grid</a>
-                  <a class="dropdown-item" href="adlistinglist.html"
+                  <a class="dropdown-item" href="/adlistinggrid">Ad Grid</a>
+                  <a class="dropdown-item" href="/adlistinglist"
                     >Ad Listing</a
                   >
-                  <a class="dropdown-item" href="ads-details.html"
+                  <a class="dropdown-item" href="/adsDetail"
                     >Listing Detail</a
                   >
                 </div>
@@ -72,18 +72,18 @@
                   Pages
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="about.html">About Us</a>
-                  <a class="dropdown-item" href="services.html">Services</a>
-                  <a class="dropdown-item" href="ads-details.html"
+                  <a class="dropdown-item" href="/about">About Us</a>
+                  <a class="dropdown-item" href="/services">Services</a>
+                  <a class="dropdown-item" href="/adsDetail"
                     >Ads Details</a
                   >
-                  <a class="dropdown-item" href="post-ads.html">Ads Post</a>
-                  <a class="dropdown-item" href="pricing.html">Packages</a>
-                  <a class="dropdown-item" href="testimonial.html"
+                  <a class="dropdown-item" href="/post-ads">Ads Post</a>
+                  <a class="dropdown-item" href="/pricing">Packages</a>
+                  <a class="dropdown-item" href="/testimonial"
                     >Testimonial</a
                   >
-                  <a class="dropdown-item" href="faq.html">FAQ</a>
-                  <a class="dropdown-item" href="404.html">404</a>
+                  <a class="dropdown-item" href="/faq">FAQ</a>
+                  <a class="dropdown-item" href="/404">404</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
@@ -97,26 +97,26 @@
                   Blog
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="blog.html"
+                  <a class="dropdown-item" href="/blog"
                     >Blog - Right Sidebar</a
                   >
-                  <a class="dropdown-item" href="blog-left-sidebar.html"
+                  <a class="dropdown-item" href="/blog-left-sidebar"
                     >Blog - Left Sidebar</a
                   >
-                  <a class="dropdown-item" href="blog-grid-full-width.html">
+                  <a class="dropdown-item" href="/blog-grid-full-width">
                     Blog full width
                   </a>
-                  <a class="dropdown-item" href="single-post.html"
+                  <a class="dropdown-item" href="/single-post"
                     >Blog Details</a
                   >
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html"> Contact </a>
+                <a class="nav-link" href="/contact"> Contact </a>
               </li>
             </ul>
             <div class="post-btn">
-              <a class="btn btn-common" href="post-ads.html"
+              <a class="btn btn-common" href="/post-ads"
                 ><i class="lni-pencil-alt"></i> Post an Ad</a
               >
             </div>
@@ -128,40 +128,40 @@
             <a href="/"> Home </a>
           </li>
           <li>
-            <a href="category.html">Categories</a>
+            <a href="/category">Categories</a>
           </li>
           <li>
             <a href="#"> Listings </a>
             <ul class="dropdown">
-              <li><a href="adlistinggrid.html">Ad Grid</a></li>
-              <li><a href="adlistinglist.html">Ad Listing</a></li>
-              <li><a href="ads-details.html">Listing Detail</a></li>
+              <li><a href="/adlistinggrid">Ad Grid</a></li>
+              <li><a href="/adlistinglist">Ad Listing</a></li>
+              <li><a href="/adsDetail">Listing Detail</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Pages</a>
             <ul class="dropdown">
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="ads-details.html">Ads Details</a></li>
-              <li><a href="post-ads.html">Ads Post</a></li>
-              <li><a href="pricing.html">Packages</a></li>
-              <li><a href="testimonial.html">Testimonial</a></li>
-              <li><a href="faq.html">FAQ</a></li>
-              <li><a href="404.html">404</a></li>
+              <li><a href="/about">About Us</a></li>
+              <li><a href="/services">Services</a></li>
+              <li><a href="/adsDetail">Ads Details</a></li>
+              <li><a href="/post-ads">Ads Post</a></li>
+              <li><a href="/pricing">Packages</a></li>
+              <li><a href="/testimonial">Testimonial</a></li>
+              <li><a href="/faq">FAQ</a></li>
+              <li><a href="/404">404</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Blog</a>
             <ul class="dropdown">
-              <li><a href="blog.html">Blog - Right Sidebar</a></li>
-              <li><a href="blog-left-sidebar.html">Blog - Left Sidebar</a></li>
-              <li><a href="blog-grid-full-width.html"> Blog full width </a></li>
-              <li><a href="single-post.html">Blog Details</a></li>
+              <li><a href="/blog">Blog - Right Sidebar</a></li>
+              <li><a href="/blog-left-sidebar">Blog - Left Sidebar</a></li>
+              <li><a href="/blog-grid-full-width"> Blog full width </a></li>
+              <li><a href="/single-post">Blog Details</a></li>
             </ul>
           </li>
           <li>
-            <a href="contact.html">Contact Us</a>
+            <a href="/contact">Contact Us</a>
           </li>
         </ul>
       </nav></header>
