--- a/views/category.hbs
+++ b/views/category.hbs
@@ -423,9 +423,9 @@
                               ></i></span>
                             <span><i class="lni-bookmark"></i></span>
                           </div>
-                          <a href="#"><img
+                          <a href="/adsDetail/{{_id}}"><img
                               class="img-fluid"
-                              src="{{images}}"
+                              src="{{display}}"
                               alt=""
                             /></a>
                         </figure>
@@ -478,9 +478,9 @@
                               ></i></span>
                             <span><i class="lni-bookmark"></i></span>
                           </div>
-                          <a href="#"><img
+                          <a href="/adsDetail/{{_id}}"><img
                               class="img-fluid"
-                              src="{{images}}"
+                              src="{{display}}"
                               alt=""
                             /></a>
                         </figure>
