--- a/views/adlistinglist.hbs
+++ b/views/adlistinglist.hbs
@@ -438,7 +438,7 @@
                           <div class="listing-bottom">
                             <h3 class="price float-left">${{price}}</h3>
                             <a
-                              href="/adsDetail"
+                              href="/adsDetail/{{_id}}"
                               class="btn btn-common float-right"
                             >View Details</a>
                           </div>
