--- a/views/category.hbs
+++ b/views/category.hbs
@@ -423,7 +423,7 @@
                               ></i></span>
                             <span><i class="lni-bookmark"></i></span>
                           </div>
-                          <a href="/adsDetail/{{_id}}"><img
+                          <a href="#"><img
                               class="img-fluid"
                               src="{{display}}"
                               alt=""
