--- a/views/404.hbs
+++ b/views/404.hbs
@@ -112,7 +112,7 @@
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="#"
+                  href="/"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
@@ -207,7 +207,7 @@
 
         <ul class="mobile-menu">
           <li>
-            <a href="/#">
+            <a href="/">
               Home
             </a>
             <ul class="dropdown">
@@ -266,7 +266,7 @@
             <div class="breadcrumb-wrapper">
               <h2 class="product-title">404</h2>
               <ol class="breadcrumb">
-                <li><a href="/#">Home /</a></li>
+                <li><a href="/">Home /</a></li>
                 <li class="current">404</li>
               </ol>
             </div>
@@ -299,7 +299,7 @@
                   Now</button>
               </form>
               <div class="description">
-                <span>Or Goto <a href="/#">Homepage</a></span>
+                <span>Or Goto <a href="/">Homepage</a></span>
               </div>
             </div>
           </div>
