--- a/views/adlistinggrid.hbs
+++ b/views/adlistinggrid.hbs
@@ -152,7 +152,7 @@
                           </div>
                           <a href="#"><img
                               class="img-fluid"
-                              src="{{display}}"
+                              src="{{images}}"
                               alt=""
                             /></a>
                         </figure>
