--- a/views/category.hbs
+++ b/views/category.hbs
@@ -80,7 +80,7 @@
               <li class="nav-item dropdown active">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="#"
+                  href="/"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
@@ -425,7 +425,7 @@
                           </div>
                           <a href="#"><img
                               class="img-fluid"
-                              src="{{display}}"
+                              src="{{images}}"
                               alt=""
                             /></a>
                         </figure>
@@ -480,7 +480,7 @@
                           </div>
                           <a href="/adsDetail/{{_id}}"><img
                               class="img-fluid"
-                              src="{{display}}"
+                              src="{{images}}"
                               alt=""
                             /></a>
                         </figure>
