--- a/views/adlistinglist.hbs
+++ b/views/adlistinglist.hbs
@@ -207,7 +207,7 @@
 
         <ul class="mobile-menu">
           <li>
-            <a href="#">
+            <a href="/">
               Home
             </a>
             <ul class="dropdown">
@@ -265,7 +265,7 @@
             <div class="breadcrumb-wrapper">
               <h2 class="product-title">Listings</h2>
               <ol class="breadcrumb">
-                <li><a href="#">Home /</a></li>
+                <li><a href="/">Home /</a></li>
                 <li class="current">Listings</li>
               </ol>
             </div>
@@ -411,7 +411,7 @@
                           </div>
                           <a href="#"><img
                               class="img-fluid"
-                              src="{{display}}"
+                              src="{{images}}"
                               alt=""
                             /></a>
                         </figure>
@@ -609,7 +609,7 @@
                           </div>
                           <a href="#"><img
                               class="img-fluid"
-                              src="{{display}}"
+                              src="{{images}}"
                               alt=""
                             /></a>
                         </figure>
