--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -11,7 +11,7 @@
             <div class="breadcrumb-wrapper">
               <h2 class="product-title">Dashbord</h2>
               <ol class="breadcrumb">
-                <li><a href="#">Home /</a></li>
+                <li><a href="/">Home /</a></li>
                 <li class="current">Dashboard</li>
               </ol>
             </div>
