--- a/views/forgot-password.hbs
+++ b/views/forgot-password.hbs
@@ -11,7 +11,7 @@
             <div class="breadcrumb-wrapper">
               <h2 class="product-title">Forgot Password</h2>
               <ol class="breadcrumb">
-                <li><a href="#">Home /</a></li>
+                <li><a href="/">Home /</a></li>
                 <li class="current">Forgot Password</li>
               </ol>
             </div>
