--- a/views/adlistinggrid.hbs
+++ b/views/adlistinggrid.hbs
@@ -152,7 +152,7 @@
                           </div>
                           <a href="#"><img
                               class="img-fluid"
-                              src="{{images}}"
+                              src={{showPhoto}}
                               alt=""
                             /></a>
                         </figure>
@@ -161,7 +161,7 @@
                             <a href="#">{{category}} > </a>
                             <a href="#">{{brand}}</a>
                           </div>
-                          <h4><a href="/adsDetail/:userid">{{title}}</a></h4>
+                          <h4><a href="/adsDetail/:id">{{title}}</a></h4>
                           <div class="meta-tag">
                             <span>
                               <a href="#"><i class="lni-user"></i>
