--- a/views/adlistinglist.hbs
+++ b/views/adlistinglist.hbs
@@ -411,7 +411,7 @@
                           </div>
                           <a href="#"><img
                               class="img-fluid"
-                              src="{{images}}"
+                              src={{showPhoto}}
                               alt=""
                             /></a>
                         </figure>
@@ -609,7 +609,7 @@
                           </div>
                           <a href="#"><img
                               class="img-fluid"
-                              src="{{images}}"
+                              src={{showPhoto}}
                               alt=""
                             /></a>
                         </figure>
