--- a/views/category.hbs
+++ b/views/category.hbs
@@ -425,7 +425,7 @@
                           </div>
                           <a href="#"><img
                               class="img-fluid"
-                              src="{{images}}"
+                              src={{showPhoto}}
                               alt=""
                             /></a>
                         </figure>
@@ -480,7 +480,7 @@
                           </div>
                           <a href="/adsDetail/{{_id}}"><img
                               class="img-fluid"
-                              src="{{images}}"
+                              src={{showPhoto}}
                               alt=""
                             /></a>
                         </figure>
