--- a/views/index-2.hbs
+++ b/views/index-2.hbs
@@ -370,7 +370,7 @@
                                 <span class="bg-green"><i class="lni-heart"></i></span>
                                 <span><i class="lni-bookmark"></i></span>
                             </div>
-                            <a href="#"><img class="img-fluid" src="{{images}}" alt=""></a>
+                            <a href="#"><img class="img-fluid" src={{showPhoto}} alt=""></a>
                         </figure>
                         <div class="feature-content">
                             <div class="product">
